# ibm-data-science

./: README.md  data-vis-readme.md  main.py  pandas-cheatsheet.md  pyproject.toml
data-analysis-with-python/: DA0101EN-4-Review-Model-Development-20231003-1696291200.jupyterlite.ipynb  DA0101EN-Review-Introduction-20231003-1696291200.jupyterlite.ipynb  Exploratory_data_analysis_cars.ipynb  Exploratory_data_analysis_laptops.ipynb  House_Sales_in_King_Count_USA.ipynb  Model_Evaluation_and_Refinement_cars.ipynb  Practice_data_loading.jupyterlite.ipynb  README.md  archhoefe-w-commands.csv  archhoefe.ipynb  archhoefe.json  laptops.csv  modul01.ipynb  module02.ipynb  module03.ipynb  practice_data_wrangling.jupyterlite.ipynb  practice_model_development_laptops.jupyterlite.ipynb  practice_model_evaluation.jupyterlite.ipynb  practice_project-20230929-1695945600.ipynb
